// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs in Dark Theme renders Default 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r1g:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1h:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1i:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:r1j:"
      role="tabpanel"
      tabIndex={0}
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </div>
    <span
      id="headlessui-tabs-panel-:r1k:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:r1l:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Tabs in Dark Theme renders DefaultPills 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r28:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r29:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2a:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:r2b:"
      role="tabpanel"
      tabIndex={0}
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </div>
    <span
      id="headlessui-tabs-panel-:r2c:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:r2d:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Tabs in Dark Theme renders NoPanels 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r2e:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2f:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2g:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r2h:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2i:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2j:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
</div>
`;

exports[`Tabs in Dark Theme renders Segment 1`] = `
Array [
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-sm"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r1m:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1n:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1o:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>,
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-md"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r1p:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1q:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1r:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>,
]
`;

exports[`Tabs in Dark Theme renders Sizes 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    className="flex justify-between w-full gap-10"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r1s:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r1t:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r1u:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (sm)
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r1v:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r20:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r21:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (md)
      </button>
    </div>
  </div>
  <div
    className="flex justify-between w-full gap-10"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r22:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r23:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r24:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (sm)
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r25:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r26:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r27:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (md)
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs in Dark Theme renders WithCustomStyles 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none after:origin-top-left after:scale-x-100 hover:text-hit after:bg-hit text-hit"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r2k:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2l:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2m:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none bg-gohan hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r2n:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 1
      </span>
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2o:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 2
      </span>
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2p:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 3
      </span>
    </button>
  </div>
</div>
`;

exports[`Tabs in Dark Theme renders WithHandler 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2q:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2r:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r2s:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <span
      id="headlessui-tabs-panel-:r2t:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:r2u:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:r2v:"
      role="tabpanel"
      tabIndex={0}
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
    </div>
  </div>
</div>
`;

exports[`Tabs in Light Theme renders Default 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r0:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r2:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:r3:"
      role="tabpanel"
      tabIndex={0}
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </div>
    <span
      id="headlessui-tabs-panel-:r4:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:r5:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Tabs in Light Theme renders DefaultPills 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:ro:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:rp:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:rq:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:rr:"
      role="tabpanel"
      tabIndex={0}
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </div>
    <span
      id="headlessui-tabs-panel-:rs:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:rt:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Tabs in Light Theme renders NoPanels 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:ru:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:rv:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r10:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r11:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r12:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r13:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
</div>
`;

exports[`Tabs in Light Theme renders Segment 1`] = `
Array [
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-sm"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r6:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r7:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r8:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>,
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-md"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r9:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:ra:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:rb:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>,
]
`;

exports[`Tabs in Light Theme renders Sizes 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    className="flex justify-between w-full gap-10"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:rc:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rd:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:re:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (sm)
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:rf:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rg:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rh:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (md)
      </button>
    </div>
  </div>
  <div
    className="flex justify-between w-full gap-10"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:ri:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rj:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (sm)
      </button>
      <button
        aria-selected={false}
        className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rk:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (sm)
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:rl:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rm:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2 (md)
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rn:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3 (md)
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs in Light Theme renders WithCustomStyles 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none after:origin-top-left after:scale-x-100 hover:text-hit after:bg-hit text-hit"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r14:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r15:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r16:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none bg-gohan hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r17:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 1
      </span>
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r18:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 2
      </span>
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r19:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      <span
        className="moon-selected:text-hit"
      >
        Tab 3
      </span>
    </button>
  </div>
</div>
`;

exports[`Tabs in Light Theme renders WithHandler 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-2"
    role="tablist"
  >
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1a:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r1b:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r1c:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div>
    <span
      id="headlessui-tabs-panel-:r1d:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <span
      id="headlessui-tabs-panel-:r1e:"
      role="tabpanel"
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      tabIndex={-1}
    />
    <div
      data-headlessui-state="selected"
      id="headlessui-tabs-panel-:r1f:"
      role="tabpanel"
      tabIndex={0}
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r30:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r31:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r32:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div>
      <div
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-:r33:"
        role="tabpanel"
        tabIndex={0}
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
      </div>
      <span
        id="headlessui-tabs-panel-:r34:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
      <span
        id="headlessui-tabs-panel-:r35:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders DefaultPills 1`] = `
<div
  dir="rtl"
>
  <div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r3o:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r3p:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r3q:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div>
      <div
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-:r3r:"
        role="tabpanel"
        tabIndex={0}
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
      </div>
      <span
        id="headlessui-tabs-panel-:r3s:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
      <span
        id="headlessui-tabs-panel-:r3t:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders NoPanels 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-4"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r3u:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r3v:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r40:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r41:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r42:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r43:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders Segment 1`] = `
<div
  dir="rtl"
>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-sm"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r36:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r37:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r38:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-orientation="horizontal"
    className="flex items-center justify-center w-fit gap-1 p-1 bg-goku rounded-moon-s-md"
    role="tablist"
  >
    <button
      aria-selected={true}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
      data-headlessui-state="selected"
      id="headlessui-tabs-tab-:r39:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={0}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r3a:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-selected={false}
      className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
      data-headlessui-state=""
      id="headlessui-tabs-tab-:r3b:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tab 3
    </button>
  </div>
</div>
`;

exports[`Tabs in RTL renders Sizes 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-4"
  >
    <div
      className="flex justify-between w-full gap-10"
    >
      <div
        aria-orientation="horizontal"
        className="flex items-center justify-center w-fit gap-2"
        role="tablist"
      >
        <button
          aria-selected={true}
          className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r3c:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          Tab 1 (sm)
        </button>
        <button
          aria-selected={false}
          className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3d:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 2 (sm)
        </button>
        <button
          aria-selected={false}
          className="px-3 py-1 gap-1 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3e:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 3 (sm)
        </button>
      </div>
      <div
        aria-orientation="horizontal"
        className="flex items-center justify-center w-fit gap-2"
        role="tablist"
      >
        <button
          aria-selected={true}
          className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r3f:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          Tab 1 (md)
        </button>
        <button
          aria-selected={false}
          className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3g:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 2 (md)
        </button>
        <button
          aria-selected={false}
          className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3h:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 3 (md)
        </button>
      </div>
    </div>
    <div
      className="flex justify-between w-full gap-10"
    >
      <div
        aria-orientation="horizontal"
        className="flex items-center justify-center w-fit gap-2"
        role="tablist"
      >
        <button
          aria-selected={true}
          className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r3i:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          Tab 1 (sm)
        </button>
        <button
          aria-selected={false}
          className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3j:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 2 (sm)
        </button>
        <button
          aria-selected={false}
          className="px-3 py-1 gap-1 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3k:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 3 (sm)
        </button>
      </div>
      <div
        aria-orientation="horizontal"
        className="flex items-center justify-center w-fit gap-2"
        role="tablist"
      >
        <button
          aria-selected={true}
          className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none bg-gohan"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r3l:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          Tab 1 (md)
        </button>
        <button
          aria-selected={false}
          className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3m:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 2 (md)
        </button>
        <button
          aria-selected={false}
          className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer hover:bg-gohan focus:outline-none"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3n:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tab 3 (md)
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders WithCustomStyles 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-4"
  >
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none after:origin-top-left after:scale-x-100 hover:text-hit after:bg-hit text-hit"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r44:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r45:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 focus:outline-none hover:text-hit after:bg-hit false"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r46:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none bg-gohan hover:bg-hit/30 moon-selected:bg-hit/30"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r47:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <span
          className="moon-selected:text-hit"
        >
          Tab 1
        </span>
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r48:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <span
          className="moon-selected:text-hit"
        >
          Tab 2
        </span>
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium rounded-moon-i-sm transition-colors cursor-pointer focus:outline-none hover:bg-hit/30 moon-selected:bg-hit/30"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r49:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <span
          className="moon-selected:text-hit"
        >
          Tab 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs in RTL renders WithHandler 1`] = `
<div
  dir="rtl"
>
  <div>
    <div
      aria-orientation="horizontal"
      className="flex items-center justify-center w-fit gap-2"
      role="tablist"
    >
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r4a:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected={false}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 text-bulma font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:origin-top-left after:scale-x-0 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r4b:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected={true}
        className="px-4 py-2 gap-2 relative flex items-center justify-center w-full whitespace-nowrap text-moon-14 font-medium cursor-pointer after:content-[\\"\\"] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-piccolo after:transition-transform after:duration-300 after:scale-y-100 hover:after:origin-top-left hover:after:scale-100 hover:text-piccolo focus:outline-none after:origin-top-left after:scale-x-100 text-piccolo"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-:r4c:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Tab 3
      </button>
    </div>
    <div>
      <span
        id="headlessui-tabs-panel-:r4d:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
      <span
        id="headlessui-tabs-panel-:r4e:"
        role="tabpanel"
        style={
          Object {
            "borderWidth": "0",
            "clip": "rect(0, 0, 0, 0)",
            "height": 0,
            "left": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "top": 1,
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
        tabIndex={-1}
      />
      <div
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-:r4f:"
        role="tabpanel"
        tabIndex={0}
      >
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
      </div>
    </div>
  </div>
</div>
`;
